--- a/index.html
+++ b/index.html
@@ -10,61 +10,98 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-      .dot {
-        height: 50px;
-        width: 50px;
-        background-color: rgb(0, 0, 0);
-        border-radius: 50%;
-        display: inline-block;
-        border: 1px black solid;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Schuss Display</h1>
-    <div class="result" style="text-align: center">
-      The results of the last shooting will appear here...
-    </div>
-    <div style="text-align: center">
-      <h2>liegend:</h2>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <div class="dot"></div>
+    <div class="mainWrapper">
+      <h1>Schuss Display</h1>
+      <div class="dropDownWrapper">
+        <div class="dropDown">
+          <label for="athleten">Athlet    </label>
+          <select
+            name="Athleten"
+            class="athleteDropDown"
+            onchange="submit(this.value);"
+            style="border-radius: 4px; padding: 2px;"
+            
+          >
+            <option value="noValue">Athleten auswählen...</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="shooting" style="text-align: center">
+        <div class="datumLabel">
+          Datum
+        </div>
+        <div class="artLabel">
+          Schussart
+        </div>
+        <div class="zeitLabel">
+          Zeit
+        </div>
+        <div class="trefferQuoteLabel">
+          Trefferquote
+        </div>
+        <div class="shotLabel">
+          Schuss Grafik
+        </div>
+        <div class="zeitAufteilungLabel">
+          Zeitaufteilung
+        </div>
+        <div class="datum">
+          <div class="uhrzeit">
+            16:45
+          </div>
+          <div class="datumKurz">
+            23.07.2021
+          </div>
+        </div>
+        <div class="art">
+          <div class="schussArt" style="font-size: medium; font-weight: bold;">Liegend</div>
+          <div class="result" style="text-align: center">
+            Results...
+          </div>
+        </div>
+        <div class="zeitWrapper">
+          <div class="zeit" style="font-size: x-large;">
+            29.4 s
+          </div>
+        </div>
+        <div class="trefferQuote" style="font-size: x-large;">
+          80 %
+        </div>
+        <div class="shotsWrapper">
+          <div class="shot">
+            <div class="dot"></div>
+            <div class="time"></div>
+          </div>
+          <div class="shot">
+            <div class="dot"></div>
+            <div class="time"></div>
+          </div>
+          <div class="shot">
+            <div class="dot"></div>
+            <div class="time"></div>
+          </div>
+          <div class="shot">
+            <div class="dot"></div>
+            <div class="time"></div>
+          </div>
+          <div class="shot">
+            <div class="dot"></div>
+            <div class="time"></div>
+          </div>
+        </div>
+        <div class="canvasWrapper">
+          <canvas
+            class="myCanvas"
+            width="300px"
+            height="50px"
+          ></canvas>
+        </div>
+      </div>
     </div>
   </body>
-  <script>
-    const Http = new XMLHttpRequest();
-    const url = "http://localhost/showAthletes?mode=id&value=4";
-    Http.open("GET", url);
-    Http.send();
-
-    Http.onreadystatechange = (e) => {
-      console.log(Http.responseText);
-      let athlete = JSON.parse(Http.responseText);
-      console.log(athlete);
-      let shooting = athlete.shots.slice(-1)[0].result;
-      console.log(shooting);
-      document.querySelectorAll(".result")[0].innerHTML = shooting.map(item=>item.state);
-
-      for (let i = 0; i < shooting.length; i++) {
-        if (shooting[i].state == "0") {
-          console.log("fehler: "+shooting[i].time);
-          console.log(shooting[i]);
-          i++;
-        } else {
-          console.log("treffer: "+shooting[i].time);
-          console.log(shooting[i]);
-          document.querySelectorAll(".dot")[
-            (shooting[i].state - 1) % 5
-          ].style.backgroundColor = "#ffffff";
-        }
-      }
-    };
-  </script>
+  <script src="./internalWebsite.js"></script>
 </html>
