Working shooting display Before major logic overhaul

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <div class="mainWrapper">
-      <h1>Schuss Display</h1>
+      <h1>Schuss Ergebnisse</h1>
       <div class="dropDownWrapper">
         <div class="dropDown">
-          <label for="athleten">Athlet    </label>
+          <label for="athleten">Athlet&nbsp;&nbsp;</label>
           <select
             name="Athleten"
             class="athleteDropDown"
@@ -97,7 +97,7 @@
           <canvas
             class="myCanvas"
             width="300px"
-            height="50px"
+            height="40px"
           ></canvas>
         </div>
       </div>
