--- a/index.html
+++ b/index.html
@@ -22,55 +22,29 @@
             name="Athleten"
             class="athleteDropDown"
             onchange="submit(this.value);"
-            style="border-radius: 4px; padding: 2px;"
-            
+            style="border-radius: 4px; padding: 2px"
           >
             <option value="noValue">Athleten auswählen...</option>
           </select>
         </div>
       </div>
 
-      <div class="shooting" style="text-align: center">
-        <div class="datumLabel">
-          Datum
-        </div>
-        <div class="artLabel">
-          Schussart
-        </div>
-        <div class="zeitLabel">
-          Zeit
-        </div>
-        <div class="trefferQuoteLabel">
-          Trefferquote
-        </div>
-        <div class="shotLabel">
-          Schuss Grafik
-        </div>
-        <div class="zeitAufteilungLabel">
-          Zeitaufteilung
-        </div>
+      <div class="shooting">
+        <div class="datumLabel">Datum</div>
+        <div class="artLabel">Schussart</div>
+        <div class="zeitLabel">Zeit</div>
+        <div class="trefferQuoteLabel">Trefferquote</div>
+        <div class="shotLabel">Schuss Grafik</div>
+        <div class="zeitAufteilungLabel">Zeitaufteilung</div>
         <div class="datum">
-          <div class="uhrzeit">
-            16:45
-          </div>
-          <div class="datumKurz">
-            23.07.2021
-          </div>
+          <div class="uhrzeit">16:45</div>
+          <div class="datumKurz">23.07.2021</div>
         </div>
-        <div class="art">
-          <div class="schussArt" style="font-size: medium; font-weight: bold;">Liegend</div>
-          <div class="result" style="text-align: center">
-            Results...
-          </div>
-        </div>
+        <div class="art">Liegend</div>
         <div class="zeitWrapper">
-          <div class="zeit" style="font-size: x-large;">
-            29.4 s
-          </div>
+          <div class="zeit" style="font-size: x-large">29.4 s</div>
         </div>
-        <div class="trefferQuote" style="font-size: x-large;">
-          80 %
-        </div>
+        <div class="trefferQuote" style="font-size: x-large">80 %</div>
         <div class="shotsWrapper">
           <div class="shot">
             <div class="dot"></div>
@@ -94,11 +68,7 @@
           </div>
         </div>
         <div class="canvasWrapper">
-          <canvas
-            class="myCanvas"
-            width="300px"
-            height="40px"
-          ></canvas>
+          <canvas class="myCanvas" width="300px" height="40px"></canvas>
         </div>
       </div>
     </div>
