changed some stuff

--- a/Final Website/Home.html
+++ b/Final Website/Home.html
@@ -28,7 +28,7 @@
               <a href="./Ergebnisse.html">Ergebnisse</a>
             </div>
             <div class="linkWrapper">
-              <a href="./Diagramme.html">diagramme</a>
+              <a href="./Diagramme.html">Diagramme</a>
             </div>
             <div class="linkWrapper">
               <a href="./Funktionsweise.html">Funktionsweise</a>
