small tweaks Added loading to Kontakt and Server respose

--- a/Final Website/Kontakt.html
+++ b/Final Website/Kontakt.html
@@ -28,7 +28,7 @@
               <a href="./Ergebnisse.html">Ergebnisse</a>
             </div>
             <div class="linkWrapper">
-              <a href="./Diagramme.html">diagramme</a>
+              <a href="./Diagramme.html">Diagramme</a>
             </div>
             <div class="linkWrapper">
               <a href="./Funktionsweise.html">Funktionsweise</a>
@@ -47,6 +47,9 @@
             <textarea id="nachricht" name="nachricht" rows="4" cols="50">
             </textarea><br>
             <input type="button" value="Submit" onclick="submit(this)"/>
+            <br>
+            <br>
+            <div class="output"></div>
         </div>
       </div>
       <div class="footerWrapper">
