--- a/Final Website/Home.html
+++ b/Final Website/Home.html
@@ -39,8 +39,12 @@
           </div>
         </div>
         <div class="displayWrapper">
-            <h1>Allgemeine Informationen</h1>
-            <p>Die Automatische Scheibenanlage registriert Treffer und Fehler und zeigt die benötigte Zeit an.</p>
+            <h1>Website Informationen</h1>
+            <p>Diese Website dient als Anzeigeoberfläche einer komplett automatisierten Biathlon Scheibenanlage. Diese entstand infolge eines Projekts im Fach Programmieren 2, an der Hochschule Kempten.</p>
+            <p>Die Anzeige der Schussergebnisse wird sowohl in einem Diagramm als auch in einer Auflistung angezeigt. Diese ermöglicht eine umfassende Analyse der Schussleistung hinsichtlich der zeitlichen Regelmäßigkeit, Schnelligkeit und Trefferquote.</p>
+            <p>Unter dem Link Funktionsweise wird der Mechanische-, Elektronische- und Softwareseitige Aufbau erläutert.</p>
+            <p>Die Scbeibenanlage wurde von den Studenten Lena Haslach und Marco Deuritz entwickelt.</p>
+            <img src="./Bilder/Vorderansicht.jpeg" alt="Vordere Ansicht" width="900px">
         </div>
       </div>
       <div class="footerWrapper">
