--- a/Final Website/Diagramme.html
+++ b/Final Website/Diagramme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Schuss Analyse</title>
+    <title>Diagramme</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -65,7 +65,7 @@
           </div>
           <canvas
             id="myChart"
-            width="800"
+            width="900"
             height="600"
             style="margin: auto; margin-top: 40px"
           ></canvas>
